implementações de pagamento

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
       <span> Melhore sua vida com a tecnologia </span>
     </section>
     <main class="container">
-      <div class="produtos">
+      <div class="produtos" id="produtos">
         <h2>Produtos</h2>
-        <div class="filtro">
+        <div class="filtro" id="filtro">
           <input type="text" id="filtro-nome" placeholder="Nome do produto" />
           <input type="text" id="filtro-marca" placeholder="Marca" />
           <input
