--- a/html/produto.html
+++ b/html/produto.html
@@ -1,63 +1,182 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contato</title>
-
-    <!-- CSS do Bootstrap -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
-
-    <!-- Seu CSS personalizado -->
+    <title>Pagamento e Dados Pessoais</title>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
     <link rel="stylesheet" href="../css/styles.css" />
     <link rel="stylesheet" href="../components/header/header.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
-</head>
-<body>
-    <!-- Header será carregado aqui -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
+  </head>
+  <body>
     <div id="header"></div>
 
-    <!-- Conteúdo da página -->
-    <section class="header-home">
-        <span> Melhore sua vida com a tecnologia </span>
-    </section>
+    <main class="container justify-content-center">
+      <div class="dados-pessoais">
+        <h2>Preencha seus Dados e Realize o Pagamento</h2>
+        <p>
+          Preencha os campos abaixo para registrar seu endereço e dados
+          pessoais, e depois concluir o pagamento:
+        </p>
 
-    <main class="container">
-        <div class="produtos">
-            <h2>Pagamento</h2>
-            <p>Preencha os dados abaixo para concluir a compra:</p>
-            <form>
-                <div class="form-group">
-                    <label for="numero-cartao">Número do Cartão</label>
-                    <input type="text" class="form-control" id="numero-cartao" required />
-                </div>
-                <div class="form-group">
-                    <label for="nome-cartao">Nome no Cartão</label>
-                    <input type="text" class="form-control" id="nome-cartao" required />
-                </div>
-                <div class="form-group">
-                    <label for="validade">Validade</label>
-                    <input type="month" class="form-control" id="validade" required />
-                </div>    
-                <div class="form-group">
-                    <label for="codigo-seguranca">Código de Segurança</label>
-                    <input type="text" class="form-control" id="codigo-seguranca" required />
-                </div>
-                <button type="submit" class="btn btn-primary">Confirmar Pagamento</button>
-            </form>
+        <!-- Formulário de Dados Pessoais -->
+        <form>
+          <h3>Dados Pessoais</h3>
+
+          <!-- Nome -->
+          <div class="form-group">
+            <label for="nome">Nome Completo</label>
+            <input
+              type="text"
+              class="form-control"
+              id="nome"
+              placeholder="Digite seu nome"
+              required
+            />
+          </div>
+
+          <!-- E-mail -->
+          <div class="form-group">
+            <label for="email">E-mail</label>
+            <input
+              type="email"
+              class="form-control"
+              id="email"
+              placeholder="Digite seu e-mail"
+              required
+            />
+          </div>
+
+          <!-- Endereço -->
+          <h3>Endereço</h3>
+          <div class="form-group">
+            <label for="cep">CEP</label>
+            <input
+              type="text"
+              class="form-control"
+              id="cep"
+              placeholder="Digite o CEP"
+              required
+            />
+          </div>
+          <div class="form-group">
+            <label for="logradouro">Endereço (Rua/Av.)</label>
+            <input
+              type="text"
+              class="form-control"
+              id="logradouro"
+              placeholder="Digite seu endereço"
+              required
+            />
+          </div>
+
+          <div class="form-group">
+            <label for="numero">Número</label>
+            <input
+              type="text"
+              class="form-control"
+              id="numero"
+              placeholder="Número da residência"
+              required
+            />
+          </div>
+
+          <div class="form-group">
+            <label for="bairro">Bairro</label>
+            <input
+              type="text"
+              class="form-control"
+              id="bairro"
+              placeholder="Digite o bairro"
+              required
+            />
+          </div>
+
+          <div class="form-group">
+            <label for="cidade">Cidade</label>
+            <input
+              type="text"
+              class="form-control"
+              id="cidade"
+              placeholder="Digite a cidade"
+              required
+            />
+          </div>
+
+          <div class="form-group">
+            <label for="estado">Estado</label>
+            <select class="form-control" id="estado" required>
+                <option value="" disabled selected>Selecione o estado</option>
+            </select>
         </div>
+
+          <!-- Formulário de Pagamento -->
+          <h3>Dados de Pagamento</h3>
+
+          <!-- Número do Cartão -->
+          <div class="form-group">
+            <label for="numero-cartao">Número do Cartão</label>
+            <input
+              type="text"
+              class="form-control"
+              id="numero-cartao"
+              placeholder="Digite o número do cartão"
+              required
+            />
+          </div>
+
+          <!-- Nome no Cartão -->
+          <div class="form-group">
+            <label for="nome-cartao">Nome no Cartão</label>
+            <input
+              type="text"
+              class="form-control"
+              id="nome-cartao"
+              placeholder="Nome no cartão"
+              required
+            />
+          </div>
+
+          <!-- Validade -->
+          <div class="form-group">
+            <label for="validade">Validade</label>
+            <input type="month" class="form-control" id="validade" required />
+          </div>
+
+          <!-- Código de Segurança -->
+          <div class="form-group">
+            <label for="codigo-seguranca">Código de Segurança</label>
+            <input
+              type="text"
+              class="form-control"
+              id="codigo-seguranca"
+              placeholder="Digite o código de segurança"
+              required
+            />
+          </div>
+
+          <div style="width: 100%; text-align: center">
+            <button type="submit" class="btn btn-primary">
+              Confirmar Pagamento
+            </button>
+          </div>
+        </form>
+      </div>
     </main>
 
-    <!-- Footer será carregado aqui -->
     <div id="footer"></div>
 
-    <!-- Seu JavaScript personalizado -->
     <script src="../js/script.js" defer></script>
 
-    <!-- JS do Bootstrap e jQuery -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
+  </body>
 </html>
-
