--- a/html/sobre.html
+++ b/html/sobre.html
@@ -1,31 +1,59 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sobre Nós</title>
 
     <!-- CSS do Bootstrap -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
 
     <!-- Seu CSS personalizado -->
     <link rel="stylesheet" href="../css/styles.css" />
     <link rel="stylesheet" href="../components/header/header.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
-</head>
-<body>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
+  </head>
+  <body>
     <!-- Header será carregado aqui -->
     <div id="header"></div>
 
     <main class="container my-5">
-        <div class="produtos">
-            <h2 class="display-4">Sobre Nós</h2>
-            <p class="lead">Somos uma empresa dedicada a melhorar a vida com tecnologia, oferecendo produtos de alta qualidade e confiabilidade.</p>
-            <h3 class="font-weight-bold mt-4">Nossa Missão</h3>
-            <p>Fornecer soluções tecnológicas acessíveis e eficientes para todos os nossos clientes.</p>
-            <h3 class="font-weight-bold mt-4">Nosso Compromisso</h3>
-            <p>Garantir a satisfação de cada cliente com suporte contínuo e inovação constante.</p>
+      <div class="sobre">
+        <h2 class="display-4">Sobre Nós</h2>
+        <div class="text-center">
+          <img
+            src="../assets/imagens/logo.png"
+            alt="Logo da Empresa"
+            class="img-fluid"
+            style="max-width: 300px"
+          />
         </div>
+        <p class="lead" style="text-align: center">
+          Somos uma empresa apaixonada por transformar vidas através da
+          tecnologia. Nosso compromisso é oferecer produtos inovadores, de alta
+          qualidade e confiabilidade, que atendem às necessidades de nossos
+          clientes com eficiência e acessibilidade.
+        </p>
+        <h3 class="font-weight-bold mt-4">Nossa Missão</h3>
+        <p style="text-align: center">
+          Nossa missão é simplificar o cotidiano das pessoas, fornecendo
+          soluções tecnológicas acessíveis, práticas e que tragam resultados
+          reais.
+        </p>
+        <h3 class="font-weight-bold mt-4">Nosso Compromisso</h3>
+        <p style="text-align: center">
+          Estamos comprometidos com a satisfação plena de nossos clientes.
+          Acreditamos que o suporte contínuo, a inovação e a excelência no
+          atendimento são essenciais para construir uma relação duradoura e de
+          confiança.
+        </p>
+      </div>
     </main>
 
     <!-- Footer será carregado aqui -->
@@ -38,5 +66,5 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
+  </body>
 </html>
