--- a/html/contato.html
+++ b/html/contato.html
@@ -1,47 +1,88 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contato</title>
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
-
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
     <link rel="stylesheet" href="../css/styles.css" />
     <link rel="stylesheet" href="../components/header/header.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
-</head>
-<body>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
+  </head>
+  <body>
     <div id="header"></div>
 
     <main class="container my-5">
-        <div class="produtos">
-            <h2 class="display-4">Contato</h2>
-            <p class="lead">Entre em contato conosco através do formulário abaixo.</p>
-            <form>
-                <div class="form-group">
-                    <label for="nome" class="font-weight-bold">Nome</label>
-                    <input type="text" class="form-control" id="nome" required />
-                </div>
-                <div class="form-group">
-                    <label for="email" class="font-weight-bold">Email</label>
-                    <input type="email" class="form-control" id="email" required />
-                </div>
-                <div class="form-group">
-                    <label for="mensagem" class="font-weight-bold">Mensagem</label>
-                    <textarea class="form-control" id="mensagem" rows="5" required></textarea>
-                </div>
-                <button type="submit" class="btn btn-primary">Enviar</button>
-            </form>
-        </div>
+      <div class="produtos">
+        <h2 class="display-4">Contato</h2>
+        <p class="lead">
+          Entre em contato conosco através do formulário abaixo.
+        </p>
+        <form id="form-contato" style="width: 100%">
+          <!-- Nome -->
+          <div class="form-group">
+            <label for="nome" class="font-weight-bold">Nome</label>
+            <input
+              type="text"
+              class="form-control"
+              id="nome"
+              placeholder="Digite seu nome"
+              required
+            />
+          </div>
+
+          <!-- Email -->
+          <div class="form-group">
+            <label for="email" class="font-weight-bold">Email</label>
+            <input
+              type="email"
+              class="form-control"
+              id="email"
+              placeholder="Digite seu e-mail"
+              required
+            />
+          </div>
+
+          <!-- Mensagem -->
+          <div class="form-group">
+            <label for="mensagem" class="font-weight-bold">Mensagem</label>
+            <textarea
+              class="form-control"
+              id="mensagem"
+              rows="5"
+              placeholder="Digite sua mensagem"
+              required
+            ></textarea>
+          </div>
+
+          <!-- Botão Enviar -->
+          <button type="submit" class="btn btn-primary">Enviar</button>
+        </form>
+      </div>
     </main>
 
     <div id="footer"></div>
 
-    <script src="../js/script.js" defer></script>
+    <script>
+      document
+        .getElementById("form-contato")
+        .addEventListener("submit", function (event) {
+          event.preventDefault();
+          alert("Mensagem enviada com sucesso!");
+          this.reset();
+        });
+    </script>
 
+    <script src="../js/script.js" defer></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
+  </body>
 </html>
